# goodreads

./: README.md  pyproject.toml
.todo/: todo.txt
data/: home-buying.csv  library-2022-02-13.csv
gr/: cli.py  csv_file.py  renderers.py
tests/: conftest.py  test_csv_file.py  test_gr.py
