[tool.poetry]
name = "my-goodreads"
version = "0.1.0"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"
packages = [
    { include = "gr" },
]

[tool.poetry.scripts]
gr = "gr.cli:run"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.27.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
ipython = "^8.24.0"
isort = "^5.13.2"
pdbpp = "^0.10.3"
pycodestyle = "^2.11.1"
pylama = "^8.4.1"
pynvim = "^0.5.0"
pylint = "^3.1.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
